[package]
name = "lsmdb"
description = "lsmdb is an efficient storage engine that implements the Log-Structured Merge Tree (LSM-Tree) data structure, designed specifically for handling key-value pairs."
authors = ["Nrishinghananda Roy <roynrishingha@gmail.com>"]
version = "0.4.0"
categories = ["data-structures", "database-implementations"]
keywords = ["database", "key-value-store", "key-value", "kv", "db"]
repository = "https://github.com/roynrishingha/lsmdb"
documentation = "https://docs.rs/lsmdb/"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[lib]
path = "src/lib.rs"

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4.26"

[dev-dependencies]
