[package]
name = "lsmdb"
description = "lsmdb is an efficient storage engine that implements the Log-Structured Merge Tree (LSM-Tree) data structure, designed specifically for handling key-value pairs."
authors = ["Nrishinghananda Roy <roynrishingha@gmail.com>"]
version = "0.5.0"
categories = ["data-structures", "database-implementations"]
keywords = ["database", "key-value-store", "key-value", "kv", "db"]
repository = "https://github.com/roynrishingha/lsmdb"
documentation = "https://docs.rs/lsmdb/"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bit-vec = "0.8"
colored = "3"
dirs = "6"
crc32fast = "1.5.0"
lru = "0.16.3"
memmap2 = "0.9"
snap = "1"

[dev-dependencies]
tempfile = "3.25.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "storage_engine"
harness = false

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
